--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fabric": "^5.3.0",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
@@ -28,8 +29,5 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "optionalDependencies": {
-    
   }
 }
